force-app/main/default/objects/OrderItem/fields/Bookable_Status__c.field-meta.xml
<CustomField>
    <fullName>Bookable_Status__c</fullName>
    <description>This shows the status of the OrderItem&apos;s booking.
Not Bookable means this orderItem isn&apos;t a bookable product.
To be booked means this orderItem is bookable but hasn&apos;t yet been booked.
Reschedule Allowed means this orderItem is bookable and has been booked but can be rescheduled.
Reschedule Not Allowed means this orderItem is bookable but can&apos;t be rescheduled.</description>
    <formula>IF(Product2.s_c__Booking_Duration__c &gt;0 ,
IF(ISBLANK(Booked_Class__c), &apos;To be booked&apos;,
IF(ISPICKVAL(Booked_Class__r.s_c__Status__c , &apos;Booked&apos;) &amp;&amp;  Booked_Class__r.Start_Date__c &gt; Today(), &apos;Reschedule Allowed&apos;,
&apos;Reschedule Not Allowed&apos;))
,
&apos;Not Bookable&apos;)</formula>
    <label>Bookable Status</label>
    <type>Text</type>
</CustomField>