force-app/main/default/objects/OrderItem/fields/Booked_Class__c.field-meta.xml
<CustomField>
    <fullName>Booked_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The currently booked in class for this OrderItem</description>
    <inlineHelpText>The currently booked in class for this OrderItem</inlineHelpText>
    <label>Booked Class</label>
    <referenceTo>s_c__Booking__c</referenceTo>
    <relationshipLabel>Class Orders</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>