force-app/main/default/objects/OrderItem/fields/Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date__c</fullName>
    <inlineHelpText>The date the booking was made.</inlineHelpText>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>