force-app/main/default/objects/OrderItem/fields/Booking_Ends_At__c.field-meta.xml
<CustomField>
    <fullName>Booking_Ends_At__c</fullName>
    <label>Booking Ends At</label>
    <type>Time</type>
</CustomField>