force-app/main/default/objects/OrderItem/fields/Booking_Starts_At__c.field-meta.xml
<CustomField>
    <fullName>Booking_Starts_At__c</fullName>
    <inlineHelpText>The nominal Booking Time for this OrderItem</inlineHelpText>
    <label>Booking Starts At</label>
    <type>Time</type>
</CustomField>