force-app/main/default/objects/OrderItem/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certification</label>
    <referenceTo>Certification__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>