force-app/main/default/objects/OrderItem/fields/Course_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Course_Outcome__c</fullName>
    <label>Course Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Selection</fullName>
                <default>true</default>
                <label>Selection</label>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Did Not Attend</fullName>
            </value>
            <value>
                <fullName>Not Completed</fullName>
            </value>
            <value>
                <fullName>Complete Did Not Pass</fullName>
            </value>
            <value>
                <fullName>Complete Pass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>