force-app/main/default/objects/OrderItem/fields/Create_Update_Booking__c.field-meta.xml
<CustomField>
    <fullName>Create_Update_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If true, will trigger a booking creation or update.</inlineHelpText>
    <label>Create/Update Booking</label>
    <type>Checkbox</type>
</CustomField>