force-app/main/default/objects/OrderItem/fields/Product_Bookable_Location__c.field-meta.xml
<CustomField>
    <fullName>Product_Bookable_Location__c</fullName>
    <description>productBookableLocationId for this booking</description>
    <inlineHelpText>productBookableLocationId for this booking</inlineHelpText>
    <label>Product Bookable Location</label>
    <length>18</length>
    <type>Text</type>
</CustomField>