force-app/main/default/objects/OrderItem/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <description>The product family from the Product2 Record, used to group similar families of products.</description>
    <formula>TEXT(Product2.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>