force-app/main/default/objects/OrderItem/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <formula>BLANKVALUE(Product2.s_c__Display_Name__c,Product2.Name)+IF(ISBLANK(Product2.ProductCode),&apos;&apos;,&apos; [&apos;+Product2.ProductCode+&apos;]&apos;)</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>